--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "crypto": "^1.0.1",
     "date-fns": "^2.21.3",
     "joi": "^17.4.0",
     "multer": "^1.4.2",
