--- a/backend/package.json
+++ b/backend/package.json
@@ -25,32 +25,28 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.5.1",
     "@nestjs/jwt": "^7.2.0",
+    "@nestjs/mapped-types": "^1.0.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/sequelize": "^0.2.0",
     "@nestjs/serve-static": "^2.1.4",
     "@ntegral/nestjs-sendgrid": "^1.0.0",
     "@sendgrid/mail": "^7.4.4",
-    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "crypto": "^1.0.1",
-    "date-fns": "^2.21.3",
-    "joi": "^17.4.0",
+    "date-fns": "^2.25.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
-    "nestjs-joi": "^1.3.4",
     "nestjs-sequelize-seeder": "^1.1.4",
-    "nestjs-yup-validator": "^1.0.14",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
     "sequelize": "^6.6.2",
-    "sequelize-typescript": "^2.1.0",
-    "yup": "^0.32.9"
+    "sequelize-typescript": "^2.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
