--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,13 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.24.0",
-    "bootstrap": "^5.1.3",
-    "classnames": "^2.3.1",
     "date-fns": "^2.25.0",
     "js-cookie": "^3.0.1",
     "polished": "^4.1.3",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-modal": "^3.14.4",
     "react-query": "^3.34.16",
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
@@ -54,7 +52,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.0",
-    "@types/react-router-bootstrap": "^0.24.5",
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.15"
   }
 }
